[gd_scene load_steps=64 format=3 uid="uid://b8gab54vm17ud"]

[ext_resource type="Script" uid="uid://cfvej4lval82c" path="res://scenes/ingleses/zapador.gd" id="1_446ji"]
[ext_resource type="Theme" uid="uid://dbjmv7rcvq2m7" path="res://themes/theme_hud.tres" id="2_apxdu"]
[ext_resource type="Shader" uid="uid://d32eaae2wmxke" path="res://shaders/outline_shader.gdshader" id="3_1aj8d"]
[ext_resource type="Texture2D" uid="uid://di3myqcnjrjox" path="res://assets/created/zapador_32.png" id="3_apxdu"]
[ext_resource type="Texture2D" uid="uid://0bskmuv3bxjj" path="res://assets/created/ingles.png" id="3_mwwvn"]
[ext_resource type="AudioStream" uid="uid://b08urcc14wbfu" path="res://assets/original/sounds/gunshot2.mp3" id="4_1aj8d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o34lq"]
shader = ExtResource("3_1aj8d")
shader_parameter/color = Color(1, 0, 0, 0.658824)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = true
shader_parameter/add_margins = false

[sub_resource type="AtlasTexture" id="AtlasTexture_mwwvn"]
atlas = ExtResource("3_apxdu")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aj8d"]
atlas = ExtResource("3_apxdu")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o34lq"]
atlas = ExtResource("3_apxdu")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuxhb"]
atlas = ExtResource("3_apxdu")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m47dw"]
atlas = ExtResource("3_apxdu")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwld8"]
atlas = ExtResource("3_apxdu")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm0au"]
atlas = ExtResource("3_apxdu")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfmhg"]
atlas = ExtResource("3_apxdu")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7swt"]
atlas = ExtResource("3_apxdu")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehbyx"]
atlas = ExtResource("3_apxdu")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_esi0c"]
atlas = ExtResource("3_apxdu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_labf1"]
atlas = ExtResource("3_apxdu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oao3x"]
atlas = ExtResource("3_apxdu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4reno"]
atlas = ExtResource("3_apxdu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80r14"]
atlas = ExtResource("3_apxdu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk3tx"]
atlas = ExtResource("3_mwwvn")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nxgc"]
atlas = ExtResource("3_mwwvn")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xxjr"]
atlas = ExtResource("3_mwwvn")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g15il"]
atlas = ExtResource("3_mwwvn")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd5b4"]
atlas = ExtResource("3_mwwvn")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1hr0"]
atlas = ExtResource("3_apxdu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxuuq"]
atlas = ExtResource("3_apxdu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihfj5"]
atlas = ExtResource("3_apxdu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk6px"]
atlas = ExtResource("3_apxdu")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_402mt"]
atlas = ExtResource("3_apxdu")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7otqa"]
atlas = ExtResource("3_apxdu")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3jtd"]
atlas = ExtResource("3_apxdu")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_662hb"]
atlas = ExtResource("3_apxdu")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5jur"]
atlas = ExtResource("3_apxdu")
region = Rect2(256, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vhaxh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwwvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aj8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o34lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuxhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m47dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwld8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm0au")
}],
"loop": false,
"name": &"die",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfmhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7swt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehbyx")
}],
"loop": true,
"name": &"hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esi0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_labf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oao3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4reno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80r14")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk3tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nxgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xxjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g15il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd5b4")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1hr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxuuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihfj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk6px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_402mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7otqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3jtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_662hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5jur")
}],
"loop": true,
"name": &"walk",
"speed": 18.0
}]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u3nqx"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pky4p"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n41af"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fav6q"]
animation = &"shoot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1yw6h"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7nslt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xgmjv"]
advance_mode = 2
advance_condition = &"walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w1mak"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uy6df"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w6dlf"]
advance_mode = 2
advance_condition = &"shooting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1gnbu"]
advance_mode = 2
advance_condition = &"got_hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5uh1q"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6nu4m"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ymea3"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pwdj1"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6xyr6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d1jqw"]
states/die/node = SubResource("AnimationNodeAnimation_u3nqx")
states/die/position = Vector2(673.333, 129.334)
states/hurt/node = SubResource("AnimationNodeAnimation_pky4p")
states/hurt/position = Vector2(544, 208.296)
states/idle/node = SubResource("AnimationNodeAnimation_n41af")
states/idle/position = Vector2(387.333, 66.2222)
states/shoot/node = SubResource("AnimationNodeAnimation_fav6q")
states/shoot/position = Vector2(320, 187.111)
states/walk/node = SubResource("AnimationNodeAnimation_1yw6h")
states/walk/position = Vector2(556, 60)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_7nslt"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_xgmjv"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_w1mak"), "shoot", "idle", SubResource("AnimationNodeStateMachineTransition_uy6df"), "idle", "shoot", SubResource("AnimationNodeStateMachineTransition_w6dlf"), "idle", "hurt", SubResource("AnimationNodeStateMachineTransition_1gnbu"), "hurt", "idle", SubResource("AnimationNodeStateMachineTransition_5uh1q"), "hurt", "die", SubResource("AnimationNodeStateMachineTransition_6nu4m"), "idle", "die", SubResource("AnimationNodeStateMachineTransition_ymea3"), "walk", "die", SubResource("AnimationNodeStateMachineTransition_pwdj1"), "die", "End", SubResource("AnimationNodeStateMachineTransition_6xyr6")]

[sub_resource type="Animation" id="Animation_sedgb"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["die"]
}

[sub_resource type="Animation" id="Animation_6mr32"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hurt"]
}

[sub_resource type="Animation" id="Animation_46p0d"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}

[sub_resource type="Animation" id="Animation_nqbab"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["shoot"]
}

[sub_resource type="Animation" id="Animation_vgw74"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0555556, 0.111111, 0.166667, 0.222222, 0.277778, 0.333333, 0.388889, 0.444444),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c88t2"]
_data = {
&"die": SubResource("Animation_sedgb"),
&"hurt": SubResource("Animation_6mr32"),
&"idle": SubResource("Animation_46p0d"),
&"shoot": SubResource("Animation_nqbab"),
&"walk": SubResource("Animation_vgw74")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3vuh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6nfb"]
bg_color = Color(0, 0.917647, 0.27451, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_apxdu"]
radius = 71.5891

[node name="Zapador" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_446ji")
aim_calculated = false

[node name="ComLabel" type="Label" parent="."]
z_index = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
scale = Vector2(1.01485, 0.970381)
theme = ExtResource("2_apxdu")
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 10

[node name="LifeLabel" type="Label" parent="."]
offset_left = -16.0
offset_top = -25.0
offset_right = 24.0
offset_bottom = -2.0
theme = ExtResource("2_apxdu")
theme_override_font_sizes/font_size = 8

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_o34lq")
position = Vector2(0.5, 0)
scale = Vector2(0.96875, 1)
sprite_frames = SubResource("SpriteFrames_vhaxh")
animation = &"walk"
frame = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, -12, -5, 12, 4, 12, 6, -13)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_d1jqw")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/die = false
parameters/conditions/got_hurt = false
parameters/conditions/idle = false
parameters/conditions/shooting = false
parameters/conditions/walking = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
&"": SubResource("AnimationLibrary_c88t2")
}

[node name="WeaponPoint" type="Marker2D" parent="."]
position = Vector2(13, 1)

[node name="WeaponSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1aj8d")
pitch_scale = 0.71
bus = &"Efectos"

[node name="LifeProgress" type="ProgressBar" parent="."]
visible = false
offset_left = 5.0
offset_top = -16.0
offset_right = 22.0
offset_bottom = -14.0
theme_override_styles/background = SubResource("StyleBoxFlat_i3vuh")
theme_override_styles/fill = SubResource("StyleBoxFlat_q6nfb")
show_percentage = false

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, 0.499999)
scale = Vector2(0.75, 1.65)

[node name="EnemyDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection"]
shape = SubResource("CircleShape2D_apxdu")

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="EnemyDetection" to="." method="_on_enemy_detection_body_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_timer_timeout"]
